# tcc

./: .gitignore  CLAUDE.md  INTERFACE_IMPROVEMENTS.md  LICENSE  README.md  client.py  encoder_calibration.json  mypy.ini  pyproject.toml  rasp.py  requirements-clean.txt  requirements.txt  test_bmi160_direct.py
artigos/: TCC - Artigos.xlsx  artigos.json  artigos.txt  artigos_part1.json  artigos_part2.json  artigos_part3.json  artigos_part4.json  artigos_part5.json  artigos_part6.json
client/: CLAUDE.md  calibration_manager.py  client_system_monitor.py  console_interface.py  g923_calibration.json  g923_manager.py  image_filters.py  keyboard_controller.py  main.py  network_client.py  requirements.txt  sensor_display.py  serial_receiver_manager.py  simple_logger.py  slider_controller.py  video_display.py  video_display_backup.py
client/components/: __init__.py  console_interface.py  keyboard_controller.py  network_client.py  sensor_display.py  simple_logger.py  slider_controller.py  video_display.py
client/console/: __init__.py  main.py  telemetry_plotter.py
client/core/: __init__.py  argument_parser.py  config.py  signal_handler.py  startup.py
client/managers/: __init__.py  client_system_monitor.py  constants.py  (+8 more)
datasheets/: BMI160_resumo.md  ESP32_DevKits _resumo.md  PCA9685_resumo.md
docs/: ARQUITETURA_REDE.md  ARQUITETURA_REDE_OK.md  BMI160_WATCHDOG.md  CAIXA_REDUCAO.md  CALIBRACAO_ENCODERS.md  CAMERA_VIDEO_ISSUES.md  CONTROLE_ATUADORES.md  ENCODER_VELOCIDADE.md  FORCE_FEEDBACK.md  G923_SETUP.md  GPU_IMAGE_PROCESSING.md  I2C_BUS_LOCK.md  I2C_CONFIG.md  INTERFACE_TELEMETRIA.md  MONITORAMENTO_ENERGIA.md  MULTI_THREAD_ARCHITECTURE.md  PERFORMANCE_DIAGNOSTICS.md  SENSORES_IMU.md  TRANSMISSAO_ZONAS_EFICIENCIA.md  WIFI_LATENCY_FIX.md  WIFI_LATENCY_FIX_OK.md
esp32/: brake_manager.cpp  brake_manager.h  encoder_calibration.cpp  encoder_calibration.h  esp32.ino  ff_motor_manager.cpp  ff_motor_manager.h  gear_manager.cpp  gear_manager.h  serial_sender_manager.cpp  serial_sender_manager.h  steering_manager.cpp  steering_manager.h  throttle_manager.cpp  throttle_manager.h
mega/: esp.h  mega.ino
monografia/: .chktexrc  Makefile  documento.tex
pro_micro/: pro_micro.ino
raspberry/: MODULOS.md  bmi160_manager.py  brake_manager.py  camera_manager.py  logger.py  main.py  motor_manager.py  network_manager.py  power_monitor_manager.py  requirements.txt  rpi_system_monitor.py  steering_manager.py  temperature_manager.py
scripts/: analyze_session.py  generate_ff_charts.py  generate_gear_zones_chart.py  generate_motor_charts.py  session_plots.py  session_report.py
test/: README_TESTS.md  debug_servo_commands.py  diagnose_1wire.py  quick_temp_test.py  test_brake.py  test_brake_direto_simples.py  test_direção_360.py  test_servo_360_graus.py  test_servo_direto.py  test_steering.py  test_steering_brake.py  test_steering_direto_simples.py  test_steering_sem_suave.py  test_temperature_sensor.py
tools/: split_pdf.py
udp_server/: Dockerfile  docker-compose.yml  main.py
(+86 files in other folders)
