[tool.black]
# Configuração do Black - Python Code Formatter
# ==============================================

# Comprimento máximo da linha
line-length = 120

# Versão do Python alvo
target-version = ['py38', 'py39', 'py310', 'py311']

# Incluir arquivos Python
include = '\.pyi?$'

# Excluir pastas e arquivos específicos
extend-exclude = '''
/(
    # Pastas de build e cache
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.eggs
    | \.pytest_cache
    | __pycache__

    # Arquivos temporários
    | \.tmp
    | \.temp

    # Arquivos de configuração que não devem ser formatados
    | setup\.py
)/
'''

# Usar aspas duplas para strings
skip-string-normalization = false

# Quebrar linhas antes de operadores binários (estilo PEP 8)
line-length = 120

# Formatação experimental
preview = false

[tool.isort]
# Configuração do isort - Import Sorter
# ====================================

# Compatibilidade com Black
profile = "black"

# Comprimento da linha (mesmo do Black)
line_length = 120

# Adicionar uma linha após imports de bibliotecas padrão
lines_after_imports = 2

# Separar imports em seções
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Conhecer imports locais (projeto F1)
known_first_party = ["core", "components"]

# Multi-line output style (compatível com Black)
multi_line_output = 3

# Include trailing comma
include_trailing_comma = true

# Force grid wrap
force_grid_wrap = 0

# Use parentheses
use_parentheses = true

# Ensure new line before comments
ensure_newline_before_comments = true

[build-system]
# Sistema de build (opcional)
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
# Metadados do projeto (opcional)
name = "f1-remote-control"
description = "Sistema de Controle Remoto F1 com Raspberry Pi"
authors = [
    {name = "Sistema F1 Remote Control"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["version"]

# Dependências básicas do projeto
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "smbus2>=0.4.0;platform_machine=='armv7l'",
]

# Dependências opcionais para desenvolvimento
[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

raspberry = [
    "adafruit-circuitpython-pca9685>=3.4.0",
    "adafruit-blinka>=8.0.0",
    "adafruit-circuitpython-motor>=3.4.0",
    "adafruit-circuitpython-servokit>=1.3.0",
    "picamera2>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/f1-remote-control"
Documentation = "https://github.com/f1-remote-control/docs"
Repository = "https://github.com/f1-remote-control"